--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -5,19 +5,19 @@ issueTrackerURL="https://github.com/sudolev/minecraft-magic-feather/issues"
 
 [[mods]]
 modId="magicfeather"
-version="0.01"
+version="0.5"
 displayName="Magic Feather: Replumed"
 displayURL="https://www.curseforge.com/minecraft/mc-mods/magic-feather"
 logoFile="logo.png"
-credits="RWTema, Fuzss"
-authors="Ephys, EizhFox, sudolev"
+credits="RWTema, Fuzss, sudolev"
+authors="Ephys, EizhFox"
 description='''
 The Magic Feather item is an alternative take on the Angel Ring from Extra Utilities.
 
 It balances creative flight by making it only available around Beacons, thus forcing the player
 to use alternative methods of travel when exploring.
 
-Magic Feather: Replumed is a port of Magic Feather for versions 1.19+
+Magic Feather: Replumed is a continuation of Magic Feather for versions 1.19+
 '''
 [[dependencies.magicfeather]]
     modId="forge"
