Change the way durability is handled.

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -5,7 +5,7 @@ issueTrackerURL="https://github.com/sudolev/minecraft-magic-feather/issues"
 
 [[mods]]
 modId="magicfeather"
-version="0.5"
+version="0.1"
 displayName="Magic Feather: Replumed"
 displayURL="https://www.curseforge.com/minecraft/mc-mods/magic-feather"
 logoFile="logo.png"
@@ -17,7 +17,7 @@ The Magic Feather item is an alternative take on the Angel Ring from Extra Utili
 It balances creative flight by making it only available around Beacons, thus forcing the player
 to use alternative methods of travel when exploring.
 
-Magic Feather: Replumed is a continuation of Magic Feather for versions 1.19+
+Magic Feather: Replumed is a continuation of Magic Feather for versions 1.19+ that includes the Magic Feather as well as 3 new types of flight feather.
 '''
 [[dependencies.magicfeather]]
     modId="forge"
