--- a/build.gradle
+++ b/build.gradle
@@ -133,7 +133,7 @@ dependencies {
 //    implementation fg.deobf('be.ephys.cookiecore:cookiecore:1.18.2-4.0.0-c56fd52')
 
     compileOnly fg.deobf("top.theillusivec4.curios:curios-forge:1.19.2-5.1.2.2:api")
-    runtimeOnly fg.deobf("top.theillusivec4.curios:curios-forge:1.19.2-5.1.2.2")
+    // runtimeOnly fg.deobf("top.theillusivec4.curios:curios-forge:1.19.2-5.1.2.2")
 }
 
 mixin {
